# cinder-file-get

./: .finishesignore  .gitignore  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  LICENSE  OPERATIONS.md  README.md  codex.sh  plan.md  toaster.md
.github/workflows/: ci.yml  rust.yml
finishes/: Cargo.toml
finishes/src/: cli.rs  config.rs  copy.rs  ignore.rs  lib.rs  main.rs  manifest.rs  scan.rs
finishes/tests/: integration.rs  property.rs
repo-harvest/: Cargo.toml
