[package]
name = "finishes"
version = "0.5.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
inquire = "0.6"
ignore = "0.4"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
proptest = "1"
