[package]
name = "repo-harvest"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }
tar = "0.4"
flate2 = "1"
walkdir = "2"
